--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
     "start:dev": "nodemon ./bin/www",
-    "prod": "NODE_ENV=production node app.js"
+    "build": "NODE_ENV=production node app.js"
   },
   "author": "",
   "license": "ISC",
